[package]
name = "leetcode-rust"
version = "0.1.0"
authors = ["lidongjies <lidongjies@gmail.com>"]
edition = "2018"

[dependencies]
reqwest = { version = "0.11.11", features = ["json", "blocking"] }
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
rand = "0.8.5"
regex = "1.3.4"
futures = { version = "0.3.21", features = ["thread-pool"] }
surf = "2.3.2"

[lib]
doctest = false
test = true
